# adverity-python-challenge

./: .gitignore  README.md  pyproject.toml
adverity/: settings.py  urls.py
adverity/adverity/: urls.py
swapi/: helpers.py  models.py  services.py  urls.py  views.py
swapi/migrations/: 0001_initial.py
templates/swapi/: base.html  collection.html  index.html  value_count.html
