[tool.poetry]
name = "django-adverity"
version = "0.1.0"
description = ""
authors = ["John Doe <racerx20001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
petl = "^1.7.12"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
